Fix hidden menu items z-index
#41

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1777,7 +1777,7 @@ body.search-open {
     top: 0;
     right: 0;
     left: 0;
-    z-index: 30002;
+    z-index: 30000;
   }
   .front-page .main-feature {
     display: -webkit-box;
