--- a/stylesheets/scss/_content.scss
+++ b/stylesheets/scss/_content.scss
@@ -298,7 +298,7 @@
       top: 0;
       right: 0;
       left: 0;
-      z-index: 30002;
+      z-index: 30000;
     }
 
     .main-feature {
